--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/home.css"> 
+    <link rel="stylesheet" href="css/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Sintony:wght@400;700&display=swap" rel="stylesheet">
     <script src="js/script.js" defer></script>
     <title>Haenssgen</title>
@@ -163,6 +164,7 @@
         </div>
     </header>
 
+    
     <ul class="linhas">
         <li class="dropdown-menu dropdown-linha">
             <div class="linha">
