Terminando pagina de produtos

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" defer></script>
     <script src="js/main.js" defer></script>
-    <script src="js/script.js" defer></script>
+    <script src="js/home.js" defer></script>
 
     <title>Haenssgen</title>
 </head>
@@ -417,9 +417,7 @@
                         <div class="de"></div>
                         <div class="preço">R$ 10,00</div>
                         <div class="pagamento">1x de R$ 10,00 sem juros</div>
-                    </div>
-                    
-                    
+                    </div>  
                 </div>
                     <button class="seta-direita seta" id="seta1">
                         <img src="images/home/arrow-right-2.svg" alt="">
